[tool.poetry]
name = "graduation"
version = "0.0.0"
description = "graduation research"
authors = ["Lenne Hirata"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
torch = "^2.5.1"
transformers = "^4.46.2"
pre-commit = "^4.0.1"
ruff = "^0.7.3"
mypy = "^1.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
